--- a/forum-admin/src/main/webapp/pages/user/taboo_user.html
+++ b/forum-admin/src/main/webapp/pages/user/taboo_user.html
@@ -80,8 +80,8 @@
                                 <td>{{user.username}}</td>
                                 <td>{{user.mobile}}</td>
                                 <td>{{user.email}}</td>
-                                <td>{{user.gag_begin_time}}</td>
-                                <td>{{user.gag_end_time}}</td>
+                                <td>{{user.beginTime}}</td>
+                                <td>{{user.endTime}}</td>
                                 <td width="240px">
                                    <a class="detail" @click="remove(user.id)">解除禁言</a>&nbsp;&nbsp;&nbsp;&nbsp;
                                 </td>
@@ -127,7 +127,25 @@
                       ]
                   }
               },
+              created(){
+                  this.findPage();
+              },
               methods:{
+                  findPage(){
+                      var param = {
+                          currentPage:this.pagination.currentPage,
+                          pageSize:this.pagination.pageSize,
+                          queryString:this.pagination.queryString
+                      }
+                      axios.post("/user-manager/findUserByStatus.do?status=1",param).then((res)=>{
+                          if (res.data.flag ) {
+                              this.users = res.data.rows;
+                              this.pagination.total = res.data.total
+                          } else {
+                              this.$message.error(res.data.message)
+                          }
+                      })
+                  },
                   // 切换页码
                   handleCurrentChange:function(currentPage) {
                       this.pagination.currentPage = currentPage;
@@ -135,14 +153,21 @@
                   },
 
                   search(){
-                      // 按照时间进行搜索为审核的文章
-                      alert(this.pagination.queryString)
+                      this.pagination.currentPage = 1;
+                      this.findPage();
                   },
                   flush(){
-                      alert("进行刷新")
+                     this.pagination.currentPage = 1;
+                     this.findPage();
                   },
-                  remove(){
-                      alert("已经解除禁言")
+                  remove(id){
+                      axios.get("/user-manager/lift.do?id="+id).then((res)=>{
+                          if (res.data.flag) {
+                              this.findPage();
+                          } else {
+                              this.$message.error(res.data.message)
+                          }
+                      })
                  }
 
               }
