--- a/forum-admin/src/main/webapp/pages/user/member.html
+++ b/forum-admin/src/main/webapp/pages/user/member.html
@@ -3,17 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../../plugins/elementui/index.css">
+   <!-- <link rel="stylesheet" href="../../plugins/elementui/index.css">
     <link rel="stylesheet" href="../../plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/component.css">
-    <!-- 引入组件库 -->
+    &lt;!&ndash; 引入组件库 &ndash;&gt;
     <script type="text/javascript" src="../../js/jquery.min.js"></script>
     <script src="../../js/vue.js"></script>
     <script src="../../plugins/elementui/index.js"></script>
-    <script src="../../js/axios-0.18.0.js"></script>
+    <script src="../../js/axios-0.18.0.js"></script>-->
+
+    <link rel="stylesheet" href="../../plugins/elementui/index.css">
+    <link rel="stylesheet" href="../../plugins/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../../css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="../../css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../../css/component.css">
+    <script type="text/javascript" src="../../js/jquery.min.js"></script>
+    <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../../js/vue.js"></script>
+    <script src="../../plugins/elementui/index.js"></script>
+    <script type="text/javascript" src="../../js/axios-0.18.0.js"></script>
 
     <style>
 
@@ -80,12 +92,34 @@
                                 <td>{{user.username}}</td>
                                 <td>{{user.mobile}}</td>
                                 <td>{{user.email}}</td>
-                                <td>{{user.begin_time}}</td>
-                                <td>{{user.end_time}}</td>
+                                <td>{{user.beginTime}}</td>
+                                <td>{{user.endTime}}</td>
                                 <td width="240px">
-                                   <a class="detail" @click="tip(user.id)">提醒</a>&nbsp;&nbsp;&nbsp;&nbsp;
-                                   <a class="detail" @click="showDetail(user.id)">详情</a>&nbsp;
+                                    <a class="detail" @click="taboo(user.id)">禁言</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <a class="detail" @click="gag(user.id)">封号</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <a class="detail" @click="showDetail(user.id)">详情</a>&nbsp;
                                 </td>
+                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+
+                                            <div class="modal-body">
+                                                <h4 style="font-weight: bold">禁言原因</h4>
+                                                <div style="margin-top: 10px">
+                                                    <div style="margin-top: 10px">
+                                                        <textarea id="textarea" v-model="notice.content" cols="86" placeholder="请填写附加的补充内容" ></textarea>
+                                                    </div>
+                                                </div>
+                                                <div style="margin-left: 467px;margin-top: 15px">
+                                            <span>
+                                                <button class="btn btn-sm btn-info " type="" @click="rescind">取消</button>
+                                                <button class="btn btn-sm btn-danger" @click="sure">确定</button>
+                                            </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </tr>
                         </table>
                     </div>
@@ -125,11 +159,57 @@
                           {id:1,username:'liu',mobile:'18832030387',email:'1198423961@qq.com',begin_time:'2012-6-5',end_time:'2012-7-8'},
                           {id:1,username:'liu',mobile:'18832030387',email:'1198423961@qq.com',begin_time:'2012-6-5',end_time:'2012-7-8'},
                           {id:1,username:'liu',mobile:'18832030387',email:'1198423961@qq.com',begin_time:'2012-6-5',end_time:'2012-7-8'},
-                      ]
+                      ],
+                      rule:{},
+                      notice:{}
                   }
               },
+              created(){
+                  this.findPage();
+              },
               methods:{
-                  // 切换页码
+                  sendNotice(){
+                      axios.post("/article-manager/failPublish.do",this.notice).then((res)=>{
+                          if ( res.data.flag) {
+                              this.findPage();
+                          } else {
+                              this.$message.error(res.data.message)
+                          }
+                      })
+                  },
+                  // 取消
+                  rescind(){
+                      $('#myModal').modal('hide')
+                  },
+                  // 确定
+                  sure(){
+                      $('#myModal').modal('hide')
+                      this.notice.title = "账号禁言通知";
+                      this.rule.status = 1;
+                      axios.post("/user-manager/againstRule.do", this.rule).then((res)=> {
+                          if ( res.data.flag ) {
+                              this.sendNotice();
+                          } else {
+                              this.$message.error(res.data.message)
+                          }
+                      });
+                  },
+                  findPage(){
+                      var param = {
+                          currentPage:this.pagination.currentPage,
+                          pageSize:this.pagination.pageSize,
+                          queryString:this.pagination.queryString
+                      };
+                      axios.post("/user-manager/findUserByType.do?type=1",param).then((res)=>{
+                          if (res.data.flag ) {
+                              this.users = res.data.rows;
+                              this.pagination.total = res.data.total;
+                          } else {
+                              this.$message.error( res.data.message );
+                          }
+                      })
+                  },
+              // 切换页码
                   handleCurrentChange:function(currentPage) {
                       this.pagination.currentPage = currentPage;
                       this.findPage();
@@ -137,16 +217,33 @@
 
                   search(){
                       // 按照时间进行搜索为审核的文章
-                      alert(this.pagination.queryString)
+                      this.pagination.currentPage=1;
+                      this.findPage();
                   },
                   flush(){
-                      alert("进行刷新")
+                     this.findPage();
                   },
-                 tip(){
-                      alert("您的会员即将到期")
-                 },
+                  taboo(id){
+                      this.notice.uid=id;
+                      this.rule.uid  = id;
+                      $('#myModal').modal('show')
+
+                  },
+                  gag(id){
+                      this.rule.uid  = id;
+                      this.rule.status = 2;
+
+                      // 封号
+                      axios.post("/user-manager/closeAccount.do", this.rule).then((res)=>{
+                          if (res.data.flag) {
+                              this.findPage()
+                          } else {
+                              this.$message.error( res.data.message );
+                          }
+                      })
+                  },
                   showDetail(id){
-                      window.open('user-member-detail.html?id='+id,'','')
+                      window.open("http://localhost:8082/article/showUserDtails.do?id="+id);
                   }
 
               }
