--- a/forum-center/src/main/webapp/pages/announce/announcement.html
+++ b/forum-center/src/main/webapp/pages/announce/announcement.html
@@ -118,7 +118,7 @@
                         <div class="modal-header" style="text-align: center">
                             <button type="button" class="close" data-dismiss="modal"><span
                                     aria-hidden="true">&times;</span></button>
-                            <h3 class="modal-title">公告</h3>
+                            <h3 class="modal-title">{{ann.title}}</h3>
                         </div>
                         <div class="modal-body">
                            {{ann.content}}
