--- a/forum-center/src/main/webapp/pages/article/article.html
+++ b/forum-center/src/main/webapp/pages/article/article.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="../../js/vue.js"></script>
     <script src="../../plugins/elementui/index.js"></script>
     <script type="text/javascript" src="../../js/axios-0.18.0.js"></script>
+    <script type="text/javascript" src="../../js/prefix.js"></script>
 
     <style>
         [v-cloak]{
@@ -28,7 +29,7 @@
         <img src="../../images/logo_right.jpg" class="pull-right" style="margin-right:120px">
         <div class="pic"  v-if="JSON.stringify(this.user)!='{}'">
 
-            <img :src="'http://q2rcyhwpl.bkt.clouddn.com/'+user.avatarName" v-cloak width="30px" height="30px" class="img-circle" style="margin-left: -23px;margin-bottom: -17px" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><div id="user-name">{{user.username}}</div>
+            <img :src="'http://'+prefix+'/'+user.avatarName" v-cloak width="30px" height="30px" class="img-circle" style="margin-left: -23px;margin-bottom: -17px" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample"><div id="user-name">{{user.username}}</div>
             <span v-cloak class='item' style="font-size: 13px"  data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample" v-cloak>{{user.name}}</span>
         </div>
         <div class="collapse" style="margin-left: 1233px;margin-top: -69px;position: absolute" id="collapseExample">
@@ -64,7 +65,7 @@
             <div id="writer">
                 <a id="suport" @click="add"><span  :class="['glyphicon','glyphicon-thumbs-up', {'zi':flag},{'zi1':!flag}]" ></span> </a>&nbsp;&nbsp;&nbsp;<div id="support-num">{{support_num>10000?Math.floor(support_num/10000)+'0000+':support_num}}</div>
                 <a href="#" >
-                <img @click="writerDetail(article.uid)" :src="'http://q2rcyhwpl.bkt.clouddn.com/'+avatarName" class="img-circle" width="30px" height="30px"/></a>&nbsp;&nbsp;&nbsp;<a ref="atten" id="atten" @click="isAttention">关注</a>
+                <img @click="writerDetail(article.uid)" :src="'http://'+prefix+'/'+avatarName" class="img-circle" width="30px" height="30px"/></a>&nbsp;&nbsp;&nbsp;<a ref="atten" id="atten" @click="isAttention">关注</a>
             </div>
             <hr>
             <div id="comments" style="margin-bottom: 20px">
@@ -100,7 +101,7 @@
                             <div  class="second-con" :id="comment.id">
                                 <div v-for="(replyComment,index2) in comment.replyComments" :key="index2">
                                     <div class="back">
-                                        <a><img v-cloak class="head-pic img-circle" :src="'http://q2rcyhwpl.bkt.clouddn.com/'+replyComment.avatarName" @click="writerDetail(replyComment.customerId)"/></a>
+                                        <a><img v-cloak class="head-pic img-circle" :src="'http://'+prefix+'/'+replyComment.avatarName" @click="writerDetail(replyComment.customerId)"/></a>
                                         <div class="ss">
                                             <span v-cloak style="font-weight: bold;font-size: 16px">{{replyComment.replyCustomerName}}</span>&nbsp;&nbsp;&nbsp;
                                             <span style="color: #999999">回复了</span>&nbsp;&nbsp;&nbsp;<span v-cloak>{{replyComment.customerName}}</span>
@@ -239,12 +240,14 @@
             ],
             placeholder:'您想对作者说些什么',
             parentId:0,
-            replyCustomerName:''
+            replyCustomerName:'',
+            prefix:''
 
         },
 
         created(){
            /* alert(JSON.stringify(this.user)=='{}')*/
+           this.prefix = prefix;
             // 获取文章id查询文章内容
            let id = getId();
            // 发送axios请求获取文章数据
