--- a/forum-center/src/main/webapp/pages/protal.html
+++ b/forum-center/src/main/webapp/pages/protal.html
@@ -14,6 +14,7 @@
     <script src="../plugins/elementui/index.js"></script>
     <script type="text/javascript" src="../js/axios-0.18.0.js"></script>
 
+
     <style>
         #searching{
             position: absolute;
@@ -33,7 +34,7 @@
           <div class="pic"  v-if="user!=null">
 
                   <img v-if="flag" src="../img/avatar5.png" width="20px" height="20px" class="img-circle" style="margin-left: 5px;margin-bottom: 5px" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                  <img v-if="!flag" :src="'http://q2rcyhwpl.bkt.clouddn.com/'+user.avatarName" width="20px" height="20px" class="img-circle" style="margin-left: 5px;margin-bottom: 5px" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                  <img v-if="!flag" :src="'http://'+prefix+'/'+user.avatarName" width="20px" height="20px" class="img-circle" style="margin-left: 5px;margin-bottom: 5px" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
               <span v-cloak class='item' style="font-size: 13px"  data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">{{user.username}}</span>
           </div>
       </div>
@@ -154,6 +155,7 @@
 
    </div>
 </body>
+<!--<script  src="../js/prefix.js"/>-->
   <script>
       var i = 0;
 
@@ -176,6 +178,7 @@
       var vm = new Vue({
           el:"#app",
           data:{
+              prefix:'',
               dialogTableVisible: false,
               flag:false,  // 头像显示标志
               user:null,
@@ -212,6 +215,7 @@
           },
 
           created(){
+             this.prefix = prefix;
               setInterval(function(){
                   var imgs = $(".window img");
                   $(imgs[2]).fadeOut(1000, function(){
