--- a/forum-center/src/main/webapp/pages/user/editmydata.html
+++ b/forum-center/src/main/webapp/pages/user/editmydata.html
@@ -157,10 +157,12 @@
             labelPosition: 'right',
             user: {
             },
-            imageUrl:''
+            imageUrl:'',
+            prefix:''
 
         },
         created() {
+            this.prefix='q4c8e7e7f.bkt.clouddn.com';
             var id = getId();
 
             //发送请求获取当前登录用户的用户名
@@ -169,9 +171,10 @@
                     this.user = response.data.data;
                     this.user.sex=this.user.sex.toString();
                     if(this.user.avatarName != null){
-                        this.imageUrl = "http://q2rcyhwpl.bkt.clouddn.com/"+this.user.avatarName;
+                        this.imageUrl = "http://"+this.prefix+"/"+this.user.avatarName;
+
                     }else{
-                        this.imageUrl = "http://q2rcyhwpl.bkt.clouddn.com/avatar5.png"
+                        this.imageUrl = "http://"+this.prefix+"/avatar5.png"
                     }
 
                 }else{
