--- a/forum-center/src/main/webapp/pages/user/main.html
+++ b/forum-center/src/main/webapp/pages/user/main.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../../css/style.css">
 
 
+
     <style type="text/css">
     .el-main {
         position: absolute;
@@ -39,7 +40,7 @@
                     <div class="right-menu">
                         <el-dropdown class="avatar-container right-menu-item" trigger="click">
                             <div class="avatar-wrapper">
-                                <img v-if="!flag"  :src="'http://q2rcyhwpl.bkt.clouddn.com/'+user.avatarName" class="user-avatar" id="1">
+                                <img v-if="!flag"  :src="'http://'+prefix+'/'+user.avatarName" class="user-avatar" id="1">
                                 <img v-if="flag"  src="../../img/avatar5.png" class="user-avatar">
                                 {{user.username}}
                             </div>
@@ -84,6 +85,7 @@
 <script src="../../plugins/elementui/index.js"></script>
 <script type="text/javascript" src="../../js/jquery.min.js"></script>
 <script type="text/javascript" src="../../js/axios-0.18.0.js"></script>
+
 <script>
     function getId(){
         var qs = location.search.substr(1), // 获取url中"?"符后的字串
@@ -100,6 +102,7 @@
             user:{
             },
             flag:false,
+            prefix:'',
             menuList:[
                 {
                     "path": "1",
@@ -206,6 +209,7 @@
             ]
         },
         created(){
+            this.prefix = 'q4c8e7e7f.bkt.clouddn.com';
             var id = getId();
             //发送请求获取当前登录用户的用户名
             axios.get('/user/getUserById.do?id='+id).then((response)=>{
