--- a/forum-center/src/main/webapp/pages/user/edit_password.html
+++ b/forum-center/src/main/webapp/pages/user/edit_password.html
@@ -40,9 +40,42 @@
             color: #8f0008;
             font-family: DFKai-SB;
         }
+
+        #left{
+            position: absolute;
+            margin-left: 126px;
+            margin-top: -101px;
+        }
+
+        #right{
+            position: absolute;
+            margin-left: 1132px;
+            margin-top: -101px;
+        }
+
+        .sc{
+            margin-top: 30px;
+            font-size: 70px;
+            font-weight: bold;
+            font-family: DFKai-SB;
+            color: red;
+        }
     </style>
 </head>
 <body>
+
+<div id="left">
+    <div class="sc">立</div>
+    <div class="sc">德</div>
+    <div class="sc">立</div>
+    <div class="sc">志</div>
+</div>
+<div id="right">
+    <div class="sc">善</div>
+    <div class="sc">学</div>
+    <div class="sc">善</div>
+    <div class="sc">行</div>
+</div>
 <div id="app">
     <h3>修改密码</h3>
     <div id="form">
