--- a/forum-admin/src/main/webapp/pages/work.html
+++ b/forum-admin/src/main/webapp/pages/work.html
@@ -248,10 +248,16 @@
                     "children":[
                         {
                             "path": "/5-1",
-                            "title": "发布公告",
-                            "linkUrl":"announce/release-announce.html",
+                            "title": "图片上传",
+                            "linkUrl":"img/img_manager.html",
                             "children":[]
                         },
+                        {
+                            "path": "/5-2",
+                            "title": "图片删减",
+                            "linkUrl":"img/img_del.html",
+                            "children":[]
+                        }
                     ]
                 },
                 {
